syntax = "proto3";
package block.ping;

service PingService {
  rpc BroadcastPing (BroadcastPingRequest) returns (BroadcastPingReply);
}

message BroadcastPingRequest {
  string node_version = 1;
  string api_version = 2;
}

message BroadcastPingReply {
  bool ready = 1;
  string node_version = 2;
  string api_version = 3;
  uint64 block_height = 4;
}