syntax = "proto3";
package block.transaction;

service TransactionService {
  rpc BroadcastTransaction (BroadcastTransactionRequest) returns (BroadcastTransactionReply);
}

message Transaction {
  uint32 version = 1;
  uint64 amount = 2;
  uint64 fee = 3;
  bytes recipient = 4;
  bytes sender = 5;
  bytes signature = 6;
  uint64 nonce = 7;
}

message BroadcastTransactionRequest {
  Transaction transaction = 1;
}

message BroadcastTransactionReply {
  bool ok = 1;
}